<?xml version="1.0"?>
<package>
  <name>timestamp_inspector</name>
  <version>0.0.1</version>
  <description>Inspect the timestamps of all topics presented in a bag and return the mean and standard deviation between messages.</description>
  <maintainer email="dhrdekok@gmail.com">Patrick de Kok</maintainer>
  <license>BSD</license>
  <author email="dhrdekok@gmail.com">Patrick de Kok</author>
  <url type="repository">https://github.com/pkok/timestamp_inspector</url>
  <url type="bugtracker">https://github.com/pkok/timestamp_inspector/issues</url>
  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>rosbag</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <run_depend>geometry_msgs</run_depend>
  <run_depend>rosbag</run_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>rospy</run_depend>
  <run_depend>sensor_msgs</run_depend>
  <export>
  </export>
</package>
